fixed visuals on header, links broke

--- a/index.html
+++ b/index.html
@@ -6,21 +6,23 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/style/style.css">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-left"><img class="navpic" src="assets/images/zStorm_symbol.png"></a>
-    <a class="navbar-brand" href="#">zStorm.dev</a>
-
-    <div class="justify-content-end" id="navbarSupportedContent">
+<div class="container-fluid">
+  <nav class="navbar rounded justify-content-end navbar-expand-lg navbar-dark bg-dark">
+    <div class="titlebar">
+    <a><img class="navpic" src="assets/images/zStorm_symbol.png"></a>
+    <a><img class="navpic2" src="assets/images/zStorm/text.png"></a>
+    </div>
+    <div class="justify-content-end" id="navbarSupportedContent"></div>
       <ul class="navbar-nav justify-content-end">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Gallery</a>
+          <a class="nav-link" href="gallery.html">Gallery</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -33,9 +35,8 @@
         </li>
       </ul>
     </div>
-
   </nav>
-
+</div>
 
 
   <script src="assets/js/function.js"></script>
