working on main page

--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>zStorm.dev</title>
-  <link rel="stylesheet" href="assets/css/tailwind.css">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/tailwind.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <script
+    type="text/javascript"> (function () { var css = document.createElement('link'); css.href = 'https://use.fontawesome.com/releases/v5.1.0/css/all.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })(); </script>
+  <link rel="stylesheet" href="./assets/css/home.css">
 </head>
+
 <body>
-<div class="container flex">
-  <!-- Beginning of full screen containers-->
-<div class="h-screen">
-<div class="container mx-auto">
-  <!-- Fixed Background and Welcome -->
-</div>
-</div>
+  <!-- Start Top Page -->
+  <div id="bg1" class="h-screen">
+    <div class="flex">
+      <div class="w-full mt-2 text-4xl fixed text-right">
+          <a target="_blank" href=""> <i id="shoppingCart"
+             class="fas fa-shopping-cart"></i>
+        </a>
+        <a target="_blank" href="https://instagram.com/tec_def"> <i id="instagram"
+            class="fab socialIcon fa-instagram"></i>
+        </a>
+        <a target="_blank" href="https://www.linkedin.com/in/steven-hofheins/"> <i id="linkedin"
+            class="fab socialIcon fa-linkedin"></i></a>
+        <a target="_blank" href="https://github.com/Tecdef"> <i id="github"
+            class="fab socialIcon mr-4 fa-github-square"></i></a>
+      </div>
+    </div>
+    <div class="flex">
+      <div class="mt-4 fixed">
+        <button href=""
+          class="bg-transparent ml-4 w-20 mt-1 block border-2 border-black hover:bg-white text-black font-bold py-1 border-b-4 hover:border-black rounded">
+          Home
+        </button>
+        <button href=""
+          class="bg-transparent ml-4 w-20 mt-1 block border-2 border-black hover:bg-white text-black font-bold py-1 border-b-4 hover:border-black rounded">
+          Contact
+        </button>
+        <button href=""
+          class="bg-transparent ml-4 w-20 mt-1 block border-2 border-black hover:bg-white text-black font-bold py-1 border-b-4 hover:border-black rounded">
+          Projects
+        </button>
+        <button href=""
+          class="bg-transparent ml-4 w-20 mt-1 block border-2 border-black hover:bg-white text-black font-bold py-1 border-b-4 hover:border-black rounded">
+          Services
+        </button>
+      </div>
+    </div>
+    <!-- intro Content (image and text) -->
+    <div id="introCont" class="container mx-auto flex w-full">
+      <div class="w-1/2 p-2 text-right">
+        <img class="mx-auto flashit" src="./assets/images/zStorm_symbol.png" alt="symbol">
+      </div>
 
-<div class="h-screen">
+
+      <div class="w-1/4 p-2 pl-6">
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block" src="./assets/images/zbullet.png" alt="symbol"> Websites
+        </div>
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4" src="./assets/images/zbullet.png" alt="symbol"> Logos
+        </div>
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4" src="./assets/images/zbullet.png" alt="symbol"> Apps</div>
+      </div>
+      <div class="w-1/4 p-2 pl-6">
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block" src="./assets/images/zbullet.png" alt="symbol"> SEO
+        </div>
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4" src="./assets/images/zbullet.png" alt="symbol"> Managed
+        </div>
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4" src="./assets/images/zbullet.png" alt="symbol"> Mobile</div>
+      </div>
+      
+    </div>
+    <div class="absolute text-center text-4xl inset-x-0 bottom-0">
+      <i id="down" class="fas fa-chevron-down"></i>
+    </div>
+  </div>
+  <!-- End Top Page -->
+  <div id="mainSecond" class="h-screen flex-auto bg-white">
     <div class="container mx-auto">
-    <!-- info -->
+
+        <div class="flex mb-4">
+            <div id="secondContent" class="w-full text-center mt-8 text-5xl">
+              The Perfect Storm
+            </div>
+          </div>
+
+          <div class="flex mb-4">
+              <div class="w-1/4 bg-gray-500 h-12"></div>
+              <div class="w-1/4 bg-gray-400 h-12"></div>
+              <div class="w-1/4 bg-gray-500 h-12"></div>
+              <div class="w-1/4 bg-gray-400 h-12"></div>
+            </div>
+            <div class="flex mb-4">
+                <div class="w-1/2 bg-gray-400 h-12"></div>
+                <div class="w-1/2 bg-gray-500 h-12"></div>
+              </div>
+
+              <div class="flex mb-4">
+                  <div class="w-full bg-gray-500 h-12"></div>
+                </div>
+
     </div>
-    </div>
-
-    <div class="h-screen">
-        <div class="container mx-auto">
-        <!-- contact -->
-        </div>
-        </div>
+  </div>
 
 
 
-</div>
+
+
+
+
 </body>
+
 </html>
