--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>zStorm.dev</title>
-  <link rel="stylesheet" href="./assets/css/tailwind.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/tailwind.css">
   <script
     type="text/javascript"> (function () { var css = document.createElement('link'); css.href = 'https://use.fontawesome.com/releases/v5.1.0/css/all.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })(); </script>
+  <script src="https://kit.fontawesome.com/7df40864cf.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./assets/css/home.css">
 </head>
 
@@ -18,8 +19,7 @@
   <div id="bg1" class="h-screen">
     <div class="flex">
       <div class="w-full mt-2 text-4xl fixed text-right">
-          <a target="_blank" href=""> <i id="shoppingCart"
-             class="fas fa-shopping-cart"></i>
+        <a target="_blank" href=""> <i id="shoppingCart" class="fas fa-shopping-cart"></i>
         </a>
         <a target="_blank" href="https://instagram.com/tec_def"> <i id="instagram"
             class="fab socialIcon fa-instagram"></i>
@@ -32,6 +32,7 @@
     </div>
     <div class="flex">
       <div class="mt-4 fixed">
+        <a class="ml-4 font-extrabold text-black ">zStorm.Dev</a>
         <button href=""
           class="bg-transparent ml-4 w-20 mt-1 block border-2 border-black hover:bg-white text-black font-bold py-1 border-b-4 hover:border-black rounded">
           Home
@@ -58,51 +59,85 @@
 
 
       <div class="w-1/4 p-2 pl-6">
-        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block" src="./assets/images/zbullet.png" alt="symbol"> Websites
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block"
+            src="./assets/images/zbullet.png" alt="symbol"> Websites
         </div>
-        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4" src="./assets/images/zbullet.png" alt="symbol"> Logos
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4"
+            src="./assets/images/zbullet.png" alt="symbol"> Logos
         </div>
-        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4" src="./assets/images/zbullet.png" alt="symbol"> Apps</div>
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4"
+            src="./assets/images/zbullet.png" alt="symbol"> Apps</div>
       </div>
       <div class="w-1/4 p-2 pl-6">
-        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block" src="./assets/images/zbullet.png" alt="symbol"> SEO
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block"
+            src="./assets/images/zbullet.png" alt="symbol"> SEO
         </div>
-        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4" src="./assets/images/zbullet.png" alt="symbol"> Managed
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4"
+            src="./assets/images/zbullet.png" alt="symbol"> Managed
         </div>
-        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4" src="./assets/images/zbullet.png" alt="symbol"> Mobile</div>
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4"
+            src="./assets/images/zbullet.png" alt="symbol"> Mobile</div>
       </div>
-      
+
     </div>
     <div class="absolute text-center text-4xl inset-x-0 bottom-0">
       <i id="down" class="fas fa-chevron-down"></i>
     </div>
   </div>
   <!-- End Top Page -->
-  <div id="mainSecond" class="h-screen flex-auto bg-white">
-    <div class="container mx-auto">
-
-        <div class="flex mb-4">
-            <div id="secondContent" class="w-full text-center mt-8 text-5xl">
-              The Perfect Storm
+  <div id="mainSecond" class="h-screen flex-auto">
+    <div class="flex mb-4">
+      <div id="ourSites" class="w-full h-64">
+          <div class="flex text-center mb-4 mt-2">
+              <div class="w-full text-white text-4xl">
+                The Perfect zStorm
+              </div>
             </div>
-          </div>
-
-          <div class="flex mb-4">
-              <div class="w-1/4 bg-gray-500 h-12"></div>
-              <div class="w-1/4 bg-gray-400 h-12"></div>
-              <div class="w-1/4 bg-gray-500 h-12"></div>
-              <div class="w-1/4 bg-gray-400 h-12"></div>
-            </div>
+        <div class="container mx-auto">
             <div class="flex mb-4">
-                <div class="w-1/2 bg-gray-400 h-12"></div>
-                <div class="w-1/2 bg-gray-500 h-12"></div>
+                <div class="w-1/4 text-center mt-4">
+                  <i class="fal fa-fingerprint text-6xl text-white"></i>
+                  <div>
+                    <p class="text-lg text-center text-white">
+                      Always Secure
+                    </p>
+                  </div>
+                </div>
+                <div class="w-1/4 text-center mt-4">
+                  <i class="fal fa-cloud text-6xl text-white"></i>
+                  <div>
+                      <p class="text-lg text-center text-white">
+                        Lightening Fast
+                      </p>
+                    </div>
+                </div>
+                <div class="w-1/4 text-center mt-4">
+                  <i class="fal fa-phone-laptop text-6xl text-white"></i>
+                  <div>
+                      <p class="text-lg text-center text-white">
+                        Mobile + Desktop Friendly
+                      </p>
+                    </div>
+                </div>
+                <div class="w-1/4 text-center mt-4">
+                  <i class="fal fa-alicorn text-6xl text-white"></i>
+                  <div>
+                      <p class="text-lg text-center text-white">
+                        Never One The Same
+                      </p>
+                    </div>
+                </div>
               </div>
 
-              <div class="flex mb-4">
-                  <div class="w-full bg-gray-500 h-12"></div>
-                </div>
 
+
+        </div>
+      </div>
     </div>
+
+
+
+
   </div>
 
 
