working on home page

--- a/public/index.html
+++ b/public/index.html
@@ -56,8 +56,6 @@
       <div class="w-1/2 p-2 text-right">
         <img class="mx-auto flashit" src="./assets/images/zStorm_symbol.png" alt="symbol">
       </div>
-
-
       <div class="w-1/4 p-2 pl-6">
         <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block"
             src="./assets/images/zbullet.png" alt="symbol"> Websites
@@ -78,66 +76,72 @@
         <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4"
             src="./assets/images/zbullet.png" alt="symbol"> Mobile</div>
       </div>
-
     </div>
     <div class="absolute text-center text-4xl inset-x-0 bottom-0">
       <i id="down" class="fas fa-chevron-down"></i>
     </div>
   </div>
+
+
   <!-- End Top Page -->
   <div id="mainSecond" class="h-screen flex-auto">
     <div class="flex mb-4">
       <div id="ourSites" class="w-full h-64">
-          <div class="flex text-center mb-4 mt-2">
-              <div class="w-full text-white text-4xl">
-                The Perfect zStorm
+        <div class="flex text-center mb-4 mt-4">
+          <div id="brandBorder" class="mx-auto px-1 text-white border-4 rounded text-4xl">
+            The Perfect <div class="inline-block" id="brandText">z</div>Storm
+          </div>
+        </div>
+        <div class="container mx-auto">
+          <div class="flex">
+            <div class="w-1/4 text-center mt-4">
+              <i class="fal fa-fingerprint text-6xl text-white"></i>
+              <div>
+                <p class="text-lg text-center text-white">
+                  Always Secure
+                </p>
               </div>
             </div>
-        <div class="container mx-auto">
-            <div class="flex mb-4">
-                <div class="w-1/4 text-center mt-4">
-                  <i class="fal fa-fingerprint text-6xl text-white"></i>
-                  <div>
-                    <p class="text-lg text-center text-white">
-                      Always Secure
-                    </p>
-                  </div>
-                </div>
-                <div class="w-1/4 text-center mt-4">
-                  <i class="fal fa-cloud text-6xl text-white"></i>
-                  <div>
-                      <p class="text-lg text-center text-white">
-                        Lightening Fast
-                      </p>
-                    </div>
-                </div>
-                <div class="w-1/4 text-center mt-4">
-                  <i class="fal fa-phone-laptop text-6xl text-white"></i>
-                  <div>
-                      <p class="text-lg text-center text-white">
-                        Mobile + Desktop Friendly
-                      </p>
-                    </div>
-                </div>
-                <div class="w-1/4 text-center mt-4">
-                  <i class="fal fa-alicorn text-6xl text-white"></i>
-                  <div>
-                      <p class="text-lg text-center text-white">
-                        Never One The Same
-                      </p>
-                    </div>
-                </div>
+            <div class="w-1/4 text-center mt-4">
+              <i class="fal fa-cloud text-6xl text-white"></i>
+              <div>
+                <p class="text-lg text-center text-white">
+                  Lightening Fast
+                </p>
               </div>
-
-
-
+            </div>
+            <div class="w-1/4 text-center mt-4">
+              <i class="fal fa-phone-laptop text-6xl text-white"></i>
+              <div>
+                <p class="text-lg text-center text-white">
+                  Mobile + Desktop Friendly
+                </p>
+              </div>
+            </div>
+            <div class="w-1/4 text-center mt-4">
+              <i class="fal fa-alicorn text-6xl text-white"></i>
+              <div>
+                <p class="text-lg text-center text-white">
+                  Never One The Same
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+<div class="container flex mx-auto">
+    <div class="w-full text-center shadow-lg rounded-lg">
+        <div class="max-w-lg mx-auto text-center text-xl font-bold">
+            Welcome to zStorm development, a place where our level of commitment and professionalism matches our level of passion. We are committed to showing you how passionate and excited we are about bettering your business. If You can dream it, we can make it happen.  What are you waiting for? Let’s get started!
+        </div>
+      </div>
 
 
-
-
+</div>
+    <div class="flex mb-4">
+        <div class="w-full bg-gray-500 h-12"></div>
+      </div>
   </div>
 
 
