--- a/public/index.html
+++ b/public/index.html
@@ -84,9 +84,9 @@
 
 
   <!-- End Top Page -->
-  <div id="mainSecond" class="h-screen flex-auto">
+  <div id="opacityWhite" class="h-screen flex-auto">
     <div class="flex mb-4">
-      <div id="ourSites" class="w-full h-64">
+      <div id="ourSites" class="w-full h-56">
         <div class="flex text-center mb-4 mt-4">
           <div id="brandBorder" class="mx-auto px-1 text-white border-4 rounded text-4xl">
             The Perfect <div class="inline-block" id="brandText">z</div>Storm
@@ -130,18 +130,41 @@
         </div>
       </div>
     </div>
-<div class="container flex mx-auto">
-    <div class="w-full text-center shadow-lg rounded-lg">
-        <div class="max-w-lg mx-auto text-center text-xl font-bold">
-            Welcome to zStorm development, a place where our level of commitment and professionalism matches our level of passion. We are committed to showing you how passionate and excited we are about bettering your business. If You can dream it, we can make it happen.  What are you waiting for? Let’s get started!
+    <div class="container flex mx-auto">
+      <div class="w-2/3 text-center inline-block mt-24 ">
+        <img src="./assets/images/text.png" alt="">
+      </div>
+      <div id="grayText" class="w-1/3 mt-24 text-left ml-6 text-xl font-bold">
+        Welcome to zStorm development, a place where our level of commitment and professionalism matches our level of
+        passion. We are committed to showing you how passionate and excited we are about bettering your business. If You
+        can dream it, we can make it happen. What are you waiting for? Let’s get started!
+      </div>
+    </div>
+
+
+
+    <div class="flex">
+        <div class="w-full text-center mb-10 mt-32">
+            <button class="bg-transparent hover:bg-white text-black font-bold py-2 px-6 border-2 border-b-4 border-black hover:bg-white rounded">
+                Contact
+              </button>
+              <button class="bg-transparent hover:bg-white text-black font-bold py-2 px-6 border-2 border-b-4 border-black hover:bg-white rounded">
+                  Services
+                </button>
+
+
         </div>
       </div>
 
-
-</div>
-    <div class="flex mb-4">
-        <div class="w-full bg-gray-500 h-12"></div>
-      </div>
+      <div id="brandBackground" class="flex h-24 mt-16 ">
+          <div class="w-1/3 text-white text-sm text-left my-auto ml-2">
+          <p>zStorm Established 2019</p>
+          <p> All Rights Reserved</p>
+          <p>Terms Of Service</p>
+          </div>
+          <div class="w-1/3"></div>
+          <div class="w-1/3 "></div>
+        </div>
   </div>
 
 
