finished making it mobile friendly just have to fix a couple small things

--- a/public/services.html
+++ b/public/services.html
@@ -11,14 +11,12 @@
   <script
     type="text/javascript"> (function () { var css = document.createElement('link'); css.href = 'https://use.fontawesome.com/releases/v5.1.0/css/all.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })(); </script>
   <script src="https://kit.fontawesome.com/7df40864cf.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./assets/css/home.css">
+  <link rel="stylesheet" href="./assets/css/services.css">
 </head>
 
-<body class="">
-  <div class="relative">
-      <!-- Start Top Page -->
-  <div id="bg1" class="flex relative h-screen">
-    <!-- Social Icons -->
+<body>
+  <!-- Start Top Page -->
+  <div id="bg1" class="h-screen">
     <div class="flex">
       <div class="w-full mt-2 text-4xl fixed text-right">
         <a target="_blank" href=""> <i id="shoppingCart" class="fas fa-shopping-cart"></i>
@@ -32,54 +30,50 @@
             class="fab socialIcon mr-4 fa-github-square"></i></a>
       </div>
     </div>
-    <!-- Nav Icons -->
     <div class="flex">
       <div class="mt-4 fixed">
-        <a class="ml-4 font-extrabold text-black ">zStorm.Dev</a>
+        <a class="ml-4 font-extrabold text-white ">zStorm.Dev</a>
         <button href=""
-          class="bg-transparent ml-4 w-20 mt-1 block border-2 border-black hover:bg-white text-black font-bold py-1 border-b-4 hover:border-black rounded">
+          class="bg-transparent ml-4 w-20 mt-1 block border-2 border-white hover:bg-white text-white font-bold py-1 border-b-4 hover:border-white rounded">
           Home
         </button>
         <button href=""
-          class="bg-transparent ml-4 w-20 mt-1 block border-2 border-black hover:bg-white text-black font-bold py-1 border-b-4 hover:border-black rounded">
+          class="bg-transparent ml-4 w-20 mt-1 block border-2 border-white hover:bg-white text-white font-bold py-1 border-b-4 hover:border-white rounded">
           Contact
         </button>
         <button href=""
-          class="bg-transparent ml-4 w-20 mt-1 block border-2 border-black hover:bg-white text-black font-bold py-1 border-b-4 hover:border-black rounded">
+          class="bg-transparent ml-4 w-20 mt-1 block border-2 border-white hover:bg-white text-white font-bold py-1 border-b-4 hover:border-white rounded">
           Projects
         </button>
         <button href=""
-          class="bg-transparent ml-4 w-20 mt-1 block border-2 border-black hover:bg-white text-black font-bold py-1 border-b-4 hover:border-black rounded">
+          class="bg-transparent ml-4 w-20 mt-1 block border-2 border-white hover:bg-white text-white font-bold py-1 border-b-4 hover:border-white rounded">
           Services
         </button>
       </div>
     </div>
     <!-- intro Content (image and text) -->
-    <!-- image -->
-    <div id="introCont" class="container md:text-center lg:text-right sm:flex-wrap flex-wrap md:flex-wrap lg:flex-no-wrap mx-auto flex w-full">
-      <div class="w-1/2 md:block w-full  md:w-full p-0 md:p-2 text-right">
-        <img class="mx-auto h-48 w-48 md:h-auto md:w-full flashit" src="./assets/images/zStorm_symbol.png" alt="symbol">
+    <div id="introCont" class="container mx-auto flex w-full">
+      <div class="w-1/2 p-2 text-right">
+        <img class="mx-auto flashit" src="./assets/images/zStorm_symbol.png" alt="symbol">
       </div>
-
-<!-- zBullets With What we do -->
-      <div class="lg:w-1/4 md:w-1/2 md:text-left pl w-1/2 lg:w-full md:pl-32 p-2 lg:pl-12">
-        <div id="topBorder" class="md:text-4xl text-base font-bold ml-1 md:w-full"><img class="h-20 w-12 md:h-28 md:w-20 inline-block"
+      <div class="w-1/4 p-2 pl-6">
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block"
             src="./assets/images/zbullet.png" alt="symbol"> Websites
         </div>
-        <div id="topBorder" class="md:text-4xl text-base font-bold ml-1 md:w-full"><img class="h-20 w-12 md:h-28 md:w-20 inline-block mt-4"
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4"
             src="./assets/images/zbullet.png" alt="symbol"> Logos
         </div>
-        <div id="topBorder" class="md:text-4xl text-base font-bold ml-1 md:w-full"><img class="h-20 w-12 md:h-28 md:w-20 inline-block mt-4"
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4"
             src="./assets/images/zbullet.png" alt="symbol"> Apps</div>
       </div>
-      <div class="lg:w-1/4 md:w-1/2 md:text-left pl md:pl-16 w-1/2  lg:w-full p-2 lg:pl-0">
-        <div id="topBorder" class="md:text-4xl text-base font-bold ml-1 md:w-full "><img class="h-20 w-12 md:h-28 md:w-20 inline-block"
+      <div class="w-1/4 p-2 pl-6">
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block"
             src="./assets/images/zbullet.png" alt="symbol"> SEO
         </div>
-        <div id="topBorder" class="md:text-4xl text-base font-bold ml-1 md:w-full "><img class="h-20 w-12 md:h-28 md:w-20 inline-block mt-4"
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4"
             src="./assets/images/zbullet.png" alt="symbol"> Managed
         </div>
-        <div id="topBorder" class="md:text-4xl text-base font-bold ml-1 md:w-full "><img class="h-20 w-12 md:h-28 md:w-20 inline-block mt-4"
+        <div id="topBorder" class="text-4xl font-bold ml-1 "><img class="h-28 w-20 inline-block mt-4"
             src="./assets/images/zbullet.png" alt="symbol"> Mobile</div>
       </div>
     </div>
@@ -101,7 +95,7 @@
         <div class="container mx-auto">
           <div class="flex">
             <div class="w-1/4 text-center mt-4">
-              <i class="fal fa-fingerprint lg:text-6xl md:flex md:text-5xl text-white"></i>
+              <i class="fal fa-fingerprint text-6xl text-white"></i>
               <div>
                 <p class="text-lg text-center text-white">
                   Always Secure
@@ -109,7 +103,7 @@
               </div>
             </div>
             <div class="w-1/4 text-center mt-4">
-              <i class="fal fa-cloud lg:text-6xl md:flex md:text-5xl text-white"></i>
+              <i class="fal fa-cloud text-6xl text-white"></i>
               <div>
                 <p class="text-lg text-center text-white">
                   Lightening Fast
@@ -117,7 +111,7 @@
               </div>
             </div>
             <div class="w-1/4 text-center mt-4">
-              <i class="fal fa-phone-laptop lg:text-6xl md:flex md:text-5xl text-white"></i>
+              <i class="fal fa-phone-laptop text-6xl text-white"></i>
               <div>
                 <p class="text-lg text-center text-white">
                   Mobile + Desktop Friendly
@@ -125,7 +119,7 @@
               </div>
             </div>
             <div class="w-1/4 text-center mt-4">
-              <i class="fal fa-alicorn lg:text-6xl md:flex md:text-5xl text-white"></i>
+              <i class="fal fa-alicorn text-6xl text-white"></i>
               <div>
                 <p class="text-lg text-center text-white">
                   Never One The Same
@@ -136,11 +130,11 @@
         </div>
       </div>
     </div>
-    <div class="container flex-wrap sm:flex-no-wrap sm:flex mx-auto">
-      <div class="w-full md:w-2/3 text-center inline-block mt-4 md:mt-24 ">
+    <div class="container flex mx-auto">
+      <div class="w-2/3 text-center inline-block mt-24 ">
         <img src="./assets/images/text.png" alt="">
       </div>
-      <div id="grayText" class="w-full mt-16 ml-0 text-center block md:inline-block md:w-1/3 md:mt-24 md:text-left md:ml-6 text-xs md:text-xl font-bold">
+      <div id="grayText" class="w-1/3 mt-24 text-left ml-6 text-xl font-bold">
         Welcome to zStorm development, a place where our level of commitment and professionalism matches our level of
         passion. We are committed to showing you how passionate and excited we are about bettering your business. If You
         can dream it, we can make it happen. What are you waiting for? Let’s get started!
@@ -150,7 +144,7 @@
 
 
     <div class="flex">
-        <div class="w-full text-center mb-10 mt-4 md:mt-32">
+        <div class="w-full text-center mb-10 mt-32">
             <button class="bg-transparent hover:bg-white text-black font-bold py-2 px-6 border-2 border-b-4 border-black hover:bg-white rounded">
                 Contact
               </button>
@@ -162,7 +156,7 @@
         </div>
       </div>
 
-      <div id="brandBackground" class="flex md:flex-shrink-0 md:mr-0 h-24 absolute inset-x-0 bottom-0">
+      <div id="brandBackground" class="flex h-24 mt-16 ">
           <div class="w-1/3 text-white text-sm text-left my-auto ml-2">
           <p>zStorm Established 2019</p>
           <p> All Rights Reserved</p>
@@ -173,7 +167,7 @@
         </div>
   </div>
 
-</div>
+
 
 
 
